# uml_hri_nerve_navigation

./: .gitignore  CMakeLists.txt  README.md  frames.gv  package.xml  run_test.sh
goals/level1/: goals.csv  obstacle_bot_goals.csv
goals/level2/: goals.csv  obstacle_bot_goals.csv
goals/level3/: goals.csv  obstacle_bot_goals.csv
goals/level4/: goals.csv
goals/nerve1_base_world/: goals.csv
goals/nerve1_full_low/: goals.csv
goals/nerve1_half_regular/: obstacle_bot_goals.csv
goals/nerve2_full_regular/: obstacle_bot_goals.csv
goals/nerve3_base_world/: goals.csv  obstacle_bot_goals.csv
goals/nerve_long_hall/: goals.csv  obstacle_bot_goals.csv
goals/nerve_physical/: goals.csv  obstacle_bot_goals.csv
launch/: dord_calculator.launch  estop.launch  geotiff_writer.launch  map_environment.launch  run_test.launch  rviz.launch  setup_test.launch  start_loggers.launch  start_test.launch
launch/levels/: level1.launch  level2.launch  level3.launch  level4.launch  nerve_long_hall.launch  nerve_physical.launch
launch/levels/nerve1/: nerve1_base_world.launch  nerve1_full_1cm_cube.launch  nerve1_full_5cm_cube.launch  nerve1_full_high.launch  nerve1_full_high_clip.launch  nerve1_full_low.launch  nerve1_full_regular.launch  nerve1_half_high.launch  nerve1_half_low.launch  nerve1_half_regular.launch  nerve1_negative.launch
launch/levels/nerve2/: nerve2_base_world.launch  nerve2_full_high.launch  nerve2_full_low.launch  nerve2_full_regular.launch  nerve2_half_high.launch  nerve2_half_low.launch  nerve2_half_regular.launch
launch/levels/nerve3/: nerve3_base_world.launch
launch/multiple_robots_testing/: checker.launch  move_base_checker.launch  multiple_robots_test_goal_sender.launch  nav_stack_goals.launch  nav_stack_test.launch  odom_filter.launch  recursive_test.launch  robot_checker.launch  robot_mover.launch  robot_mover_mbf.launch  run_multiple_robots_test.launch  setup_pioneer.launch  setup_pioneer_mbf.launch  setup_test_multiple_robots.launch  start_roscore.launch  test_runner.launch  tester_checker.launch  tester_goal_publisher.launch  tuw_logger.launch  tuw_mbf_test.launch  tuw_send_goals.launch  tuw_test.launch
launch/multiple_robots_testing/navigation/: amcl_ns.launch  move_base_def.launch  move_base_flex.launch  navigation_mb.launch  new_mb.launch  new_mbf.launch
launch/multiple_robots_testing/tuw/: local_controller_recursive_gz.launch  mbf_local_controller.launch  tuw.launch
launch/navigation/: amcl.launch  gmapper.launch  map_server.launch  map_teleop.launch  move_base.launch  navigation_2d.launch  navigation_3d.launch  navigation_obstacle_bot.launch  octomap_mapper.launch  octomap_server.launch  pcl_to_laser.launch  pointcloud_filter.launch  pose_publisher.launch  save_maps.launch  setup_navigation.launch
launch/navigation/depricated/: rtabmap_with_laser.launch  rtabmap_without_laser.launch
launch/robots/: setup_fetch.launch  setup_mir.launch  setup_obstacle_bot.launch  setup_pioneer.launch
msg/: Goal.msg  SimLog.msg
resources/config/default_pioneer/: base_local_planner_params.yaml  costmap_common_params.yaml
resources/config/fetch/: config.rviz  robot_dimensions.yaml
resources/config/mir/: pc_to_laser_config.yaml
resources/config/obsbot_mbf/: base_local_planner_params.yaml  local_costmap_params.yaml  recovery_behaviors.yaml
resources/config/obstacle_bot/: kinect_config.yaml
resources/config/physical/obsbot_mbf/: controllers.yaml  global_costmap_params.yaml  planners.yaml
resources/config/physical/obstacle_bot/: config.rviz
resources/config/physical/pioneer_bot_mbf/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
resources/config/physical/pioneer_mbf/: costmap_common_params.yaml  local_costmap_params.yaml
resources/config/pioneer/: robot_dimensions.yaml
resources/config/pioneer_bot_mbf/: base_local_planner_params.yaml  planners.yaml
resources/config/pioneer_mbf/: base_local_planner_params.yaml  costmap_common_params.yaml
resources/config/simulation/default_pioneer/: costmap_common_params.yaml
resources/config/simulation/default_pioneer_bot/: costmap_common_params.yaml  local_costmap_params.yaml
resources/config/simulation/fetch/: default_controllers.yaml
resources/config/simulation/mir/: config.rviz  diffdrive_controller.yaml
resources/config/simulation/pioneer/: config.rviz
resources/static_maps/2d/: level2.yaml  level4.pgm  level4.yaml  nerve1_base_world.yaml  nerve1_full_1cm_cube.yaml  nerve1_full_5cm_cube.yaml  nerve1_full_high.yaml  nerve1_full_low.yaml  nerve1_full_regular.pgm  nerve1_full_regular.yaml  nerve1_half_low.pgm  nerve1_half_regular.yaml  nerve1_negative.yaml  nerve2_base_world.yaml  nerve2_full_high.yaml  nerve2_full_regular.yaml  nerve2_half_regular.pgm  nerve_ant_demo.pgm  nerve_ant_demo.yaml  nerve_demo_second_pioneer.pgm  nerve_demo_second_pioneer.yaml  nerve_long_hall.yaml  nerve_physical.yaml  nerve_uShape_def.pgm  nerve_uShape_def.yaml  nerve_u_shape.pgm  nerve_u_shape.yaml  nerve_ushape.pgm  nerve_ushape.yaml  u_shape.pgm  u_shape.yaml
resources/static_maps/3d/: level2.bt  nerve1_full_regular.bt  nerve1_half_high.bt  nerve1_half_low.bt  nerve1_half_regular.bt  nerve_long_hall.bt  nerve_physical.bt
scripts/: log_sim_data.sh  save_maps.sh
scripts/depricated/: run_test.sh
scripts/nav_reporting/: nist_nav_test_report.py  requirements.txt
scripts/nav_reporting/nerve_physical_2_aisles_blocked_Wed_Feb_3_18_34_16_2021/: nerve_physical_2_aisles_blocked_Wed_Feb_3_18_34_16_2021.xlsx
src/: automated_navigation_tester.cpp  checker.cpp  dord_calculator.cpp  estop.cpp  goal_pub.cpp  graph_checker.cpp  logger.cpp  mbf_mover.cpp  move_base_checker.cpp  move_base_mover.cpp  mover.cpp  ob_mover.cpp  obstacle_bot.cpp  pose_publisher.cpp  robot_checker.cpp  rosaria_odom_filter.cpp  setup_fetch.cpp  test_json.cpp  test_runner.cpp  tester_checker.cpp  tester_goal_publisher.cpp  tuw_goal_sender.cpp  tuw_mb_mover.cpp  tuw_node.cpp
test_defs/: nav_stack_test.json  nerve2_tuw_mbf_single_robot.json  sample.json  sample_test.json  test_1.json  tuw_mbf_test.json
(+61 files in other folders)
